Video Sequencer Editor: Transform Effector breaks when you check the Offset box #77410

Closed
opened 2020-06-05 04:11:46 +02:00 by Gustavo Valdiviesso · 4 comments

System Information
Operating system: Ubuntu Linux 18.04
Graphics card: GeForce GTX 1050i
system-info.txt

Blender Version
Broken: 2.83.0
Worked: (optional)

Short description of error
On the Transform Effector of the Video Sequencer Editor, the Transformation scale factor and X Y position stops responding when you check the Offset box.

Exact steps for others to reproduce the error

  • On the video sequencer editor add an image or text strip
  • Add an Effect strip > Transformation for the strip
  • Change the scale and position (note that it works)
  • Check the Offset box
  • Changing the scale and position of the transformation doesn't work on this state. It is either the offset or the zoom, no both.
**System Information** Operating system: Ubuntu Linux 18.04 Graphics card: GeForce GTX 1050i [system-info.txt](https://archive.blender.org/developer/F8577941/system-info.txt) **Blender Version** Broken: 2.83.0 Worked: (optional) **Short description of error** On the `Transform Effector` of the `Video Sequencer Editor`, the `Transformation scale factor` and `X Y position` stops responding when you check the `Offset` box. **Exact steps for others to reproduce the error** - On the video sequencer editor add an image or text strip - Add an Effect strip > Transformation for the strip - Change the scale and position (note that it works) - Check the Offset box - Changing the scale and position of the transformation doesn't work on this state. It is either the offset or the zoom, no both.

Added subscriber: @valdiviesso

Added subscriber: @valdiviesso
Germano Cavalcante changed title from Video Editing Transformation Zoom breaks to Video Sequencer Editor: Transform Effector breaks when you check the Offset box 2020-06-05 19:10:26 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 9b4e621db0

This issue was referenced by 9b4e621db02a152d5582433551e3688643a9b573

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-06-26 16:42:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77410
No description provided.